--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "preview": "nuxt preview"
   },
   "dependencies": {
+    "@contentful/rich-text-from-markdown": "^16.0.0",
+    "@contentful/rich-text-html-renderer": "^17.0.0",
     "contentful": "^11.3.0",
     "nuxt": "^3.14.1592",
+    "snipcart": "^0.0.1",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vuetify-nuxt-module": "^0.18.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16"
   }
 }
