--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "snipcart": "^0.0.1",
     "vue": "latest",
     "vue-router": "latest",
+    "vuetify": "^3.0.0",
     "vuetify-nuxt-module": "^0.18.3"
   },
   "devDependencies": {
+    "@vueuse/core": "^12.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16"
