--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@contentful/rich-text-from-markdown": "^16.0.0",
     "@contentful/rich-text-html-renderer": "^17.0.0",
+    "@heroicons/vue": "^1.0.6",
     "contentful": "^11.3.0",
     "nuxt": "^3.14.1592",
     "snipcart": "^0.0.1",
